활동로그 페이지이동 get방식으로 수정

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -280,6 +280,10 @@ body > div#content{
 	color: #fff;
 }
 
+#paging{
+	text-align: center;
+}
+
 .highlight {
     position: relative;
     display: inline-block;
